@@ -20,7 +20,6 @@ import java.util.Arrays;
 import java.util.stream.Collectors;
 import javax.annotation.CheckForNull;
 import javax.annotation.Nullable;
-import org.apache.commons.lang3.StringUtils;
 import org.sonar.plugins.java.api.tree.ExpressionTree;
 import org.sonar.plugins.java.api.tree.LiteralTree;
 import org.sonar.plugins.java.api.tree.Tree;
@@ -124,7 +123,7 @@ public class LiteralUtils {
   }
 
   public static String trimLongSuffix(String longString) {
-    if (StringUtils.isBlank(longString)) {
+    if (longString == null || longString.isBlank()) {
       return longString;
     }
     int lastCharPosition = longString.length() - 1;
